erDiagram
    USERS {
        int id PK
        string username
        enum role
        boolean status
        string image_path
        string password
        string remember_token
        timestamp created_at
        timestamp updated_at
    }
    PEGAWAIS {
        int id PK
        int user_id FK
        boolean is_atasan
        string nama_lengkap
        string nip
        enum jenis_kelamin
        string tempat_lahir
        date tanggal_lahir
        enum status_kepegawaian
        string pangkat_golongan
        string jabatan
        string unit_kerja
        string pendidikan
        string nomor_hp
        string email
        timestamp created_at
        timestamp updated_at
    }
    SURATS {
        int id PK
        int pegawai_id FK
        int approved_by FK "nullable - pimpinan yang acc/tolak"
        string nomor_surat
        enum jenis_surat
        date tanggal_surat
        string perihal
        enum status
        text keterangan
        text ditolak_alasan
        enum jenis_cuti
        date tanggal_mulai_cuti
        date tanggal_selesai_cuti
        text keterangan_cuti
        text tembusan
        text dasar_hukum
        text tujuan_tugas
        string lokasi_tugas
        date tanggal_mulai_tugas
        date tanggal_selesai_tugas
        timestamp created_at
        timestamp updated_at
    }

    PASSWORD_RESET_TOKENS {
        string username PK
        string token
        timestamp created_at
    }
    SESSIONS {
        string id PK
        int user_id FK
        string ip_address
        text user_agent
        longtext payload
        int last_activity
    }
    USERS ||--o| PEGAWAIS : "has"
    PEGAWAIS ||--o{ SURATS : "requests"
    PEGAWAIS ||--o{ SURATS : "approves"

